# focus-test-task

./: .docker.env  .env.example  .test.env  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
src/: config.py  ioc.py  main.py
src/api/commons/: exception_handler.py
src/api/task/: handler.py  schemas.py
src/core/commons/: filter.py
src/core/commons/migrations/: env.py
src/core/commons/migrations/versions/: 3b9d605c2222_24_07_2025_14_58.py
src/core/task/: dto.py  entity.py  exceptions.py  filters.py  model.py  repository.py  use_cases.py
tests/: conftest.py
tests/task/api/: conftest.py  test_api.py
tests/task/core/: conftest.py  test_repository.py
